[tool.poetry]
name = "ascii-tree-diagram"
version = "0.1.0"
description = "A CLI utility to visualise directory structures as ASCII folder diagrams."
authors = ["JamzTyson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
